<resources>
    <string name="app_name">Museum App</string>
    <string name="cancel_button">cancel_button</string>
    <string name="delete_button">delete_button</string>
    <string name="map_button">map_button</string>
    <string name="account_button">account_button</string>
    <string name="confirm">Confirm</string>
    <string name="logout_button">logout_button</string>
    <string name="edit_button">Allows users to edit Museum details</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="login_redirect">Already have an account. Log in.</string>
    <string name="add_museum">Add Museum</string>
    <string name="museum_details">Museum Details</string>
    <string name="description">Description</string>
    <string name="this_is_the_description">This is the description....</string>
    <string name="category">Category</string>
    <string name="reviews">Reviews</string>
    <string name="login">Login</string>
    <string name="sign_up_redirect">Don\'t have an account. Sign up.</string>
    <string name="this_is_a_map_view">This is a map view</string>
    <string name="add_museum_details">Add Museum Details</string>
    <string name="museum_name">Museum Name</string>
    <string name="short_description">Short Description</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="review">Review</string>
    <string name="add_image">Add Image</string>
    <string name="add_location">Add Location</string>
    <string name="create_museum">Create Museum</string>
    <string name="your_account">Your Account</string>
    <string name="user_details">User Details</string>
    <string name="total_added_museums">Total added museums</string>
    <string name="museums">Museums</string>
    <string name="email">Email</string>
    <string name="change_image">Change Image</string>
    <string name="save_changes">Save Changes</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Museum App</string>
    <string name="nav_header_subtitle">visit us</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="museumNotFound">No Museum Found.. \nGo Add One</string>
    <string name="addMuseumError">Error : Couldn\'t Add Museum...</string>
    <string name="updateUserError">Error: Couldn\'t Update User</string>
    <string name="addMuseumSuccess">Added Museum</string>
    <string name="messageLoading">Please Wait while the Museums are Loading...</string>
    <string name="auth_failed">Authorisation failed</string>
    <string name="sign_out">Sign-out</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="name">Name</string>
    <string name="natural_history">Natural History</string>
    <string name="favourites">Favourites</string>

    <string name="facebook_app_id">1226598491630450</string>
    <string name="fb_login_protocol_scheme">fb1226598491630450</string>
    <string name="facebook_client_token">0f0c26e5a525f104763ac37071bda271</string>
</resources>