<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="museumVM"
            type="ie.setu.museum.ui.addMuseum.AddMuseumViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width= "match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addMuseum.AddMuseumView">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/museum_name"
                    android:textColorHint="@color/grey_font"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="Required"
                    app:helperTextTextColor="@color/design_default_color_error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/splash_screen_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameText"
                        android:text="@={museumVM.observableMuseum.name}"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxHeight="100dp"
                        android:minHeight="50dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shortDescription"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/short_description"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:startIconDrawable="@drawable/description_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shortDescriptionText"
                        android:text="@={museumVM.observableMuseum.shortDescription}"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxHeight="150dp"
                        android:minHeight="50dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    app:hintEnabled="false"
                    app:helperText="Required"
                    app:errorEnabled="true"
                    app:helperTextTextColor="@color/design_default_color_error"
                    app:startIconDrawable="@drawable/category_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shortDescription">


                    <AutoCompleteTextView
                        android:id="@+id/category"
                        android:text="@={museumVM.observableMuseum.category}"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/choose_a_category"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/review"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:hint="@string/review"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryLayout"
                    app:startIconDrawable="@drawable/review_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reviewText"
                        android:text="@={museumVM.observableMuseum.review}"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minHeight="50dp" />


                </com.google.android.material.textfield.TextInputLayout>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:rating="@={museumVM.observableMuseum.rating}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#BF7070"
                    android:backgroundTintMode="add"
                    android:numStars="5"
                    android:stepSize="0.5"
                    app:barrierMargin="@dimen/material_emphasis_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.136"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/review" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <Button
                    android:id="@+id/location"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/add_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:paddingBottom="60dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    app:iss_period="3000"
                    app:iss_text_align="CENTER"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="@string/create_museum"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

